--- a/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
+++ b/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
@@ -31,30 +31,40 @@
         "#Machine Learning and AutoML homeWork\n",
         "* **Name :** Souyeh Zouhir\n",
         "* **Course :** Machine Learning\n",
-        "* **Tools :** Scikit-learn, TPOT, Google Colab"
+        "* **Tools used in this homework:** Scikit-learn, TPOT, Google Colab, kagglehub, numpy\n",
+        "## I.Objectif :\n",
+        "* Apply clustering to segment customers\n",
+        "* Build and evaluate classification models for fraud detection\n",
+        "* Discover and apply AutoML\n",
+        "* Comparing a manual approach with AutoML\n",
+        "* Use GitHub for versioning and sharing code\n",
+        "\n",
+        "Ce notebook contient :\n",
+        "* Project 1: Customer segmentation\n",
+        "* Project 2: Fraud Detection\n",
+        "* A mini state of the art on AutoML\n",
+        "* The Application of AutoML on Project 2"
       ],
       "metadata": {
         "id": "hV97hP6zw3Ew"
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!pip install -U scikit-learn pandas numpy matplotlib seaborn imbalanced-learn tpot kagglehub[pandas-datasets] kagglehub[mall-customers]\n"
+        "# II. Project 1: Customer Segmentation\n"
       ],
       "metadata": {
-        "id": "4FhDy-Ppy96w"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "JMlW9Iofyq6r"
+      }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# I. Project 1: Customer Segmentation\n"
+        "## 2.1 Load and Explore the dataset"
       ],
       "metadata": {
-        "id": "JMlW9Iofyq6r"
+        "id": "IarJ0u1dA3rB"
       }
     },
     {
@@ -62,26 +72,19 @@
       "source": [
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
         "import kagglehub\n",
         "from kagglehub import KaggleDatasetAdapter\n",
         "from sklearn.cluster import KMeans, AgglomerativeClustering\n",
-        "\n",
-        "\n",
-        "# Set the path to the file you'd like to load\n",
-        "file_path = \"Mall_Customers.csv\"\n",
-        "\n",
-        "# Load the latest version\n",
         "df = kagglehub.load_dataset(\n",
-        "  KaggleDatasetAdapter.PANDAS,\n",
-        "  \"shwetabh123/mall-customers\",\n",
-        "  file_path,\n",
-        "  # Provide any additional arguments like\n",
-        "  # sql_query or pandas_kwargs. See the\n",
-        "  # documenation for more information:\n",
-        "  # https://github.com/Kaggle/kagglehub/blob/main/README.md#kaggledatasetadapterpandas\n",
+        "    KaggleDatasetAdapter.PANDAS,\n",
+        "    \"shwetabh123/mall-customers\",\n",
+        "    \"Mall_Customers.csv\"\n",
         ")\n",
         "\n",
-        "print(\"First 5 records:\", df.head())"
+        "df.head()\n",
+        "df.info()\n",
+        "df.describe()"
       ],
       "metadata": {
         "id": "KfjxrpwxzKLq"
@@ -92,7 +95,157 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# II. Project 2: Credit Card Fraud Detection\n",
+        "2.2 Analysis of customer characteristics"
+      ],
+      "metadata": {
+        "id": "OOMjWwigBYQJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.histplot(df['Age'],kde=True)\n",
+        "plt.title(\"Age distribution\")\n",
+        "plt.show()\n",
+        "\n",
+        "sns.histplot(df['Annual Income (k$)'],kde=True)\n",
+        "plt.title(\"Distribution of annual income\")\n",
+        "plt.show()\n",
+        "\n",
+        "sns.histplot(df['Spending Score (1-100)'],kde=True)\n",
+        "plt.title(\"Distribution of the Spending Score\")\n",
+        "plt.show()\n",
+        "\n",
+        "df['Gender'].value_counts().plot(kind='bar', title=\"Gender distribution\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "Iyu3irc5Az_h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.3 Clustering - K-Means"
+      ],
+      "metadata": {
+        "id": "qcAHlLe5CmtA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = df[['Annual Income (k$)', 'Spending Score (1-100)']]\n",
+        "kmeans = KMeans(n_clusters=5 ,random_state=42)\n",
+        "df['KMeans_Cluster'] = kmeans.fit_predict(X)"
+      ],
+      "metadata": {
+        "id": "H7_l97h9CtSD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.scatter(   df['Annual Income (k$)'],\n",
+        "    df['Spending Score (1-100)'],\n",
+        "    c=df['KMeans_Cluster'])\n",
+        "plt.xlabel(\"Annual Income (k$)\")\n",
+        "plt.ylabel(\"Spending Score\")\n",
+        "plt.title(\"Customer Segmentation - KMeans\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "HiYl04skDJgw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.4 Clustering - Agglomeratif"
+      ],
+      "metadata": {
+        "id": "1_YVw_e7Dm35"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "agg = AgglomerativeClustering(n_clusters=5)\n",
+        "df['Agg_Cluster'] = agg.fit_predict(X)"
+      ],
+      "metadata": {
+        "id": "82UkfqGyDwML"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.scatter(   df['Annual Income (k$)'],\n",
+        "    df['Spending Score (1-100)'],\n",
+        "    c=df['Agg_Cluster'])\n",
+        "plt.title(\"Customer Segmentation - Agglomerate clustering\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "s68fEKesD95h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.5 Advanced Visualisation"
+      ],
+      "metadata": {
+        "id": "vz2F3uHiEOaW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.pairplot(\n",
+        "    df,\n",
+        "    vars=['Age','Annual Income (k$)',\n",
+        "          'Spending Score (1-100)'],\n",
+        "    hue='KMeans_Cluster'\n",
+        ")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "EAi-3CZMEUHh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.6 Interpretation\n",
+        "- High-Income, High-Scoring Customers: Premium Customers\n",
+        "- High income but low score: potential customers\n",
+        "- Low income but high spending: Impulse customers\n",
+        "- Low income and low spending: low marketing priority"
+      ],
+      "metadata": {
+        "id": "cZPHwynvEs9x"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# III. Project 2: Credit Card Fraud Detection\n",
+        "\n",
+        "#* Incomplete*\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -102,6 +255,7 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import kagglehub\n",
