--- a/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
+++ b/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
@@ -76,7 +76,7 @@
         "import kagglehub\n",
         "from kagglehub import KaggleDatasetAdapter\n",
         "from sklearn.cluster import KMeans, AgglomerativeClustering\n",
-        "df = kagglehub.load_dataset(\n",
+        "df = kagglehub.dataset_load(\n",
         "    KaggleDatasetAdapter.PANDAS,\n",
         "    \"shwetabh123/mall-customers\",\n",
         "    \"Mall_Customers.csv\"\n",
@@ -90,20 +90,12 @@
         "id": "KfjxrpwxzKLq",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 580
+          "height": 525
         },
-        "outputId": "e7735bff-438b-4184-cc14-530e455eae37"
+        "outputId": "fd2d4ce6-e515-4cdf-f0bb-bb3633d1f7b7"
       },
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-4293427500.py:7: DeprecationWarning: Use dataset_load() instead of load_dataset(). load_dataset() will be removed in a future version.\n",
-            "  df = kagglehub.load_dataset(\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -139,7 +131,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4154dce9-6c5a-4620-ad30-0f88bf09cfb9\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4da658e4-cd06-40a2-b610-816d8af5298a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -227,7 +219,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4154dce9-6c5a-4620-ad30-0f88bf09cfb9')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4da658e4-cd06-40a2-b610-816d8af5298a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -279,12 +271,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4154dce9-6c5a-4620-ad30-0f88bf09cfb9 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4da658e4-cd06-40a2-b610-816d8af5298a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4154dce9-6c5a-4620-ad30-0f88bf09cfb9');\n",
+              "        const element = document.querySelector('#df-4da658e4-cd06-40a2-b610-816d8af5298a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -304,8 +296,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-c1df906d-b72d-4cbd-9a8b-ed3d94b84971\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c1df906d-b72d-4cbd-9a8b-ed3d94b84971')\"\n",
+              "    <div id=\"df-770d927b-9835-4ecd-90d8-8de8c9b25dee\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-770d927b-9835-4ecd-90d8-8de8c9b25dee')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -424,7 +416,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-c1df906d-b72d-4cbd-9a8b-ed3d94b84971 button');\n",
+              "            document.querySelector('#df-770d927b-9835-4ecd-90d8-8de8c9b25dee button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -440,7 +432,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 10
         }
       ]
     },
