--- a/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
+++ b/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
@@ -121,12 +121,12 @@
         "df.describe()"
       ],
       "metadata": {
-        "id": "qoqH2rsMIH_X",
-        "outputId": "86eab2d4-8fe0-4533-c45c-11842fd729c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "qoqH2rsMIH_X",
+        "outputId": "86eab2d4-8fe0-4533-c45c-11842fd729c3"
       },
       "execution_count": 12,
       "outputs": [
@@ -717,7 +717,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_fraud = kagglehub.load_dataset(\n",
+        "df_fraud = kagglehub.dataset_load(\n",
         "    KaggleDatasetAdapter.PANDAS,\n",
         "    \"mlg-ulb/creditcardfraud\",\n",
         "    \"creditcard.csv\"\n",
@@ -728,20 +728,12 @@
         "id": "LbWkh-4Py-LB",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 307
+          "height": 273
         },
-        "outputId": "4c33fbea-cdde-4079-9838-58b9e3fe18aa"
+        "outputId": "8712a958-14d7-4a30-804e-9c77a0f9ae72"
       },
-      "execution_count": 11,
+      "execution_count": 17,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-205840111.py:1: DeprecationWarning: Use dataset_load() instead of load_dataset(). load_dataset() will be removed in a future version.\n",
-            "  df_fraud = kagglehub.load_dataset(\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -778,7 +770,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ff4f8f6d-7032-484f-8a92-ca7d9aa73a4e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a73a0ab3-7b73-4804-beac-a5a9b9827777\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -948,7 +940,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ff4f8f6d-7032-484f-8a92-ca7d9aa73a4e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a73a0ab3-7b73-4804-beac-a5a9b9827777')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1000,12 +992,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ff4f8f6d-7032-484f-8a92-ca7d9aa73a4e button.colab-df-convert');\n",
+              "        document.querySelector('#df-a73a0ab3-7b73-4804-beac-a5a9b9827777 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ff4f8f6d-7032-484f-8a92-ca7d9aa73a4e');\n",
+              "        const element = document.querySelector('#df-a73a0ab3-7b73-4804-beac-a5a9b9827777');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1025,8 +1017,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-71f72c43-8d3d-40b4-a475-62d72239e83f\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-71f72c43-8d3d-40b4-a475-62d72239e83f')\"\n",
+              "    <div id=\"df-003b2f68-fc1e-4901-b50c-34eacd464ab6\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-003b2f68-fc1e-4901-b50c-34eacd464ab6')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1145,7 +1137,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-71f72c43-8d3d-40b4-a475-62d72239e83f button');\n",
+              "            document.querySelector('#df-003b2f68-fc1e-4901-b50c-34eacd464ab6 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1161,7 +1153,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 17
         }
       ]
     },
@@ -1180,12 +1172,12 @@
         "df_fraud['Class'].value_counts()"
       ],
       "metadata": {
-        "id": "G9jVtZqwHRsT",
-        "outputId": "ce48e6a7-ff71-44cf-cf63-1c4ebe668c07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 178
-        }
+        },
+        "id": "G9jVtZqwHRsT",
+        "outputId": "ce48e6a7-ff71-44cf-cf63-1c4ebe668c07"
       },
       "execution_count": 14,
       "outputs": [
@@ -1251,12 +1243,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "6GJqcm_gHYYs",
-        "outputId": "fb691a57-919c-42e8-c134-7e69a16e9192",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "6GJqcm_gHYYs",
+        "outputId": "fb691a57-919c-42e8-c134-7e69a16e9192"
       },
       "execution_count": 16,
       "outputs": [
