--- a/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
+++ b/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
@@ -685,6 +685,7 @@
         "## 2.6 Interpretation\n",
         "- High-Income, High-Scoring Customers: Premium Customers\n",
         "- High income but low score: potential customers\n",
+        "- Medium income and medium spending: Average/Regular Customers\n",
         "- Low income but high spending: Impulse customers\n",
         "- Low income and low spending: low marketing priority"
       ],
