--- a/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
+++ b/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
@@ -682,12 +682,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 2.6 Interpretation\n",
-        "- High-Income, High-Scoring Customers: Premium Customers\n",
-        "- High income but low score: potential customers\n",
-        "- Medium income and medium spending: Average/Regular Customers\n",
-        "- Low income but high spending: Impulse customers\n",
-        "- Low income and low spending: low marketing priority"
+        "## 2.6 Interpretation and recommendation\n",
+        "- High-Income, High-Scoring Customers (Premium Customers): Keep them happy with loyalty programs, special offers, and personalized messages.\n",
+        "- High Income, Low Score (Potential Customers): Try to engage them more with promotions, upselling, and awareness campaigns.\n",
+        "- Medium Income, Medium Spending (Regular Customers): Encourage them to keep buying with discounts, bundles, or loyalty points.\n",
+        "- Low Income, High Spending (Impulse Customers): Push limited-time offers or promotions to boost their purchases.\n",
+        "- Low Income, Low Spending (Low Priority): Don’t spend too much on marketing here; stick to cost-effective ways or basic retention strategies.\n",
+        "\n"
       ],
       "metadata": {
         "id": "cZPHwynvEs9x"
