--- a/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
+++ b/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
@@ -31,7 +31,7 @@
         "#Machine Learning and AutoML homeWork\n",
         "* **Name :** Souyeh Zouhir\n",
         "* **Course :** Machine Learning\n",
-        "* **Tools used in this homework:** Scikit-learn, TPOT, Google Colab, kagglehub, numpy\n",
+        "* **Tools used in this homework:** Scikit-learn, TPOT, Google Colab, kagglehub, numpy, pandas, seaborn, matplotlib\n",
         "## I.Objectif :\n",
         "* Apply clustering to segment customers\n",
         "* Build and evaluate classification models for fraud detection\n",
