--- a/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
+++ b/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
@@ -1293,7 +1293,7 @@
       "metadata": {
         "id": "h8SduZnzNLuv"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1316,7 +1316,7 @@
       "metadata": {
         "id": "1KV-I5vhOCNP"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1331,7 +1331,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1365,7 +1365,7 @@
           "height": 452
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1382,7 +1382,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# III. AutoML – State of the Art\n",
+        "# IV. AutoML – State of the Art\n",
         "# ** Incomplete (In Need of further Research)**\n",
         "\n",
         "## What is AutoML ?\n",
@@ -1411,7 +1411,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# IV. AutoML Applied to Fraud Detection\n"
+        "# V. AutoML Applied to Fraud Detection\n"
       ],
       "metadata": {
         "id": "TNCDTYDoy1rP"
