--- a/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
+++ b/Souyeh_Zouhir_ML_AutoML_Homework.ipynb
@@ -29,6 +29,8 @@
       "cell_type": "markdown",
       "source": [
         "#Machine Learning and AutoML homeWork\n",
+        "\n",
+        "\n",
         "* **Name :** Souyeh Zouhir\n",
         "* **Course :** Machine Learning\n",
         "* **Tools used in this homework:** Scikit-learn, TPOT, Google Colab, kagglehub, numpy, pandas, seaborn, matplotlib\n",
@@ -39,7 +41,7 @@
         "* Comparing a manual approach with AutoML\n",
         "* Use GitHub for versioning and sharing code\n",
         "\n",
-        "Ce notebook contient :\n",
+        "This notebook contains :\n",
         "* Project 1: Customer segmentation\n",
         "* Project 2: Fraud Detection\n",
         "* A mini state of the art on AutoML\n",
